refactor: Move ApkChangedObservers and improve compatibility
- Moved `ApkChangedObservers` from the `shizuku-server` to a new `data-shared` module to allow broader access.
- Refactored `ApkChangedObservers` to improve compatibility with different Android versions and ensure proper handler usage.
- Added support for Android Tiramisu's typed `getParcelable` method across the codebase for better forward compatibility.
- Updated AdbMdns to use newer Android U `ServiceInfoCallback` when available.
- Introduced a new `ActivateStatus` to better represent the server's state, including an "Updating" status.
- Minor UI text change from "Start" to "Start Pairing".